<resources>

    <string name="app_name">CourseSocial</string>
    <string name="title_section3">TA</string>
    <string name="title_section2">Professor</string>
    <string name="title_section1">Course</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_feedback_tab">FeedbackTab</string>
    <string name="title_activity_univ_list">UnivList</string>
    <string name="select_courses">Select Courses</string>
    <string name="select_department">Select Department</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_select_course_dialog">SelectCourseDialog</string>
    <string name="title_activity_suggested_courses">SuggestedCourses</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="grads">Graduate Courses</string>
    <string name="ugrads">Undergrad Courses</string>
    <string name="mliked">Most Liked</string>
    <string name="sortbn">Sory by Number</string>
    <string name="filter">Filter</string>
    <string name="title_activity_filter_courses_dialog">Filter</string>

</resources>