<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
     <item android:id="@+id/grads"
        android:title="@string/grads"
        android:orderInCategory="100"
        android:showAsAction="never" />
      <item android:id="@+id/undergrads"
        android:title="@string/ugrads"
        android:orderInCategory="100"
        android:showAsAction="never" />
       <item android:id="@+id/mostLiked"
        android:title="@string/mliked"
        android:orderInCategory="100"
        android:showAsAction="never" />
        <item android:id="@+id/sort_by_number"
        android:title="@string/sortbn"
        android:orderInCategory="100"
        android:showAsAction="never" />
        <item android:id="@+id/filter"
        android:title="@string/filter"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon= "@drawable/ic_filter"  />
        
         
</menu>
